<resources>
    <string name="app_name">Phone List</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="keep_me_logged">Keep me logged</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_account_sign_up">Don´t have account? Sign up!</string>
    <string name="recover_your_password">Recover your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signup">Signup</string>
    <string name="passwords_don_t_match">Passwords don´t match</string>
    <string name="please_insert_all_required_fields">Please insert all required fields</string>
    <string name="signup_ok">Signup ok</string>
    <string name="signup_error">Signup error</string>
    <string name="login_error">Login error</string>
    <string name="logout">LOGOUT</string>
    <string name="new_contact">New Contact</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="select_an_image">Select an Image</string>
    <string name="remove_image">REMOVE IMAGE</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="delete">Delete</string>
    <string name="update_ok">Update OK</string>
    <string name="update_error">Update Error</string>
    <string name="delete_ok">Delete OK</string>
    <string name="delete_error">Delete Error</string>
    <string name="edit">EDIT</string>
    <string name="back">BACK</string>
</resources>