<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:src="@drawable/contacts_icon"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_person_24"
            android:gravity="center"
            android:text="admin"
            android:hint="@string/user_name" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_lock_24"
            android:gravity="center"
            android:text="password"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <CheckBox
            android:id="@+id/checkbox_logged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keep_me_logged" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/don_t_have_account_sign_up" />

    <TextView
        android:id="@+id/text_recover_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_signup"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/recover_your_password" />

</RelativeLayout>